--- a/stocks/quotes/templates/base.html
+++ b/stocks/quotes/templates/base.html
@@ -37,9 +37,22 @@
         </div>
       </nav>
     <div class="container">
-    {% block content %}
 
-    {% endblock %}
+        <br/>
+
+        {% if message %}
+            {% for message in messages %}
+                <div class="alert alert-warning alert-dismissable" role="alert">
+                    <button class="close" data-dismiss="alert">
+                        <small><sup>x</sup></small>
+                    </button>
+                    {{ message }}
+                </div><br/>
+            {% endfor %}
+        {% endif %}
+        {% block content %}
+
+        {% endblock %}
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
