--- a/stocks/blog/templates/base.html
+++ b/stocks/blog/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Stock Portfolio</title>
+    <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -27,7 +27,10 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-              </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'add_post'%}">Add Post</a>
+            </li>
           </ul>
           <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method='POST'>
               {% csrf_token %}
