--- a/stocks/blog/templates/article_details.html
+++ b/stocks/blog/templates/article_details.html
@@ -7,10 +7,10 @@
 {% block content %}
 
 <h1>{{ post.title }}</h1>
-<small>By: {{ post.author }}-{{ post.post_date }}-<a href="{% url 'update_post' post.pk %}">Edit Post</a>-<a href="{% url 'delete_post' post.pk %}">Delete Post</a></small><br/>
+<small>By: {{ post.author }}-{{ post.post_date }}{%if user.is_authenticated %}-<a href="{% url 'update_post' post.pk %}">Edit Post</a>-<a href="{% url 'delete_post' post.pk %}">Delete Post</a></small>{% endif %}<br/>
 <hr>
 <br/>
-{{post.body }}
+{{post.body|safe }}
 
 <br/><br/>
 <a href="{% url 'home' %}" class="btn btn-success">Back</a>
