--- a/stocks/blog/templates/base.html
+++ b/stocks/blog/templates/base.html
@@ -24,13 +24,26 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">News</a>
-            </li>
-            <li class="nav-item">
+            </li>  
+            {% if user.is_authenticated%}
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'add_post'%}">Add Post</a>
-            </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'add_post'%}">Add Post</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'register'%}">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login'%}">Login</a>
+              </li>
+            {% endif %}
+                
           </ul>
           <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method='POST'>
               {% csrf_token %}
