--- a/stocks/blog/templates/update_post.html
+++ b/stocks/blog/templates/update_post.html
@@ -3,6 +3,7 @@
 {% block title %}Edit blog post{% endblock %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <h1>Edit Blog Post</h1>
 
 <div class="form-group">
@@ -12,5 +13,7 @@
         <button class="btn btn-success">Update</button>
     </form>
 </div>
-
+{% else %}
+ YOU ARE NOT AUTHENTICATED
+{% endif %}
 {% endblock %}
