--- a/stocks/quotes/templates/registration/register.html
+++ b/stocks/quotes/templates/registration/register.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 
-{% block title %}Create a new blog post{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
 <h1>Add Blog Post</h1>
+
 <div class="form-group">
     <form method=POST>
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-success">Post</button>
+        <button class="btn btn-success">Register</button>
     </form>
 </div>
-{% else %}
-You are not authenticated
-{% endif %}
+
 {% endblock %}
